--- a/portfolio/src/main/webapp/images.html
+++ b/portfolio/src/main/webapp/images.html
@@ -6,6 +6,11 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <ul id="navBar">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="projects.html">Projects</a></li>
+            <li><a href="images.html">Image Gallery</a></li>
+        </ul>
         <h1>Memory Palace Tour</h1>
         <div class="ImgGallery">
             <p>Welcome to my Memory Palace!</p>
