--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -7,6 +7,11 @@
     <script src="script.js"></script>
   </head>
   <body>
+    <ul id="navBar">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="projects.html">Projects</a></li>
+        <li><a href="images.html">Image Gallery</a></li>
+    </ul>
     <h1>Difan Yang</h1>
     <img src="/images/selfpic.jpeg" alt="A photo of me holding a huge bread.">
     
@@ -23,44 +28,6 @@
       <p>More random facts about me:</p>
       <button onclick="addRandomFacts()">Click to get the fact</button>
       <div id="fact-container"></div>
-      <p>Click <a href="images.html">here</a> to see more pictures of Difan Yang!</p>
     </div>
-    
-    <div class="content">
-        <h2>Selected Projects</h2>
-
-        <h3>Calendar</h3>
-        <p>February 2019 | Vanderbilt University</p>
-        <p class="projectIntro">A calendar storing a collection of reminders in
-            the chronological order.</p>
-        <ul>
-            <li>Enable users to add, delete, and search for a certain reminder.</li>
-            <li>Examined three different implementations in C++: static
-                arrays, dynamic arrays, and linked lists.</li>
-            <li>Tested the program with 20+ trial cases to ensure its reliability.</li>
-        </ul>
-
-        <h3>Guitar Simulator</h3>
-        <p>March 2019 | Vanderbilt University</p>
-        <p class="projectIntro">A program turning text files into sound files.</p>
-        <ul>
-            <li>Designed a program that read a text file with information on
-                what notes were to be generated and when they were to be generated,
-                and from that generated a sound file.</li>
-            <li>Experimented text message storing with both a queue ADT and a stack
-                ADT in C++ and measured the relative performance.</li>
-        </ul>
-
-        <h3>Text Twist</h3>
-        <p>April 2019 | Vanderbilt University</p>
-        <p class="projectIntro">A solution generator for the game Text Twist.</p>
-        <ul>
-            <li>Solved the game with the basic principles of trial and error.</li>
-            <li>Constructed a tree-like ADT to store a lexicon of all accepted words.</li>
-            <li>Implemented the main program that searched for all words in the
-                lexicon, of three or more letters, that could be generated
-                from the seven given letters.</li>
-        </ul>
-
   </body>
 </html>
