--- a/portfolio/src/main/webapp/images.html
+++ b/portfolio/src/main/webapp/images.html
@@ -8,8 +8,9 @@
     <body>
         <ul id="navBar">
             <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
             <li><a href="projects.html">Projects</a></li>
-            <li><a href="images.html">Image Gallery</a></li>
+            <li><a href="images.html" class="active">Image Gallery</a></li>
         </ul>
         <h1>Memory Palace Tour</h1>
         <div class="ImgGallery">
