--- a/portfolio/src/main/webapp/projects.html
+++ b/portfolio/src/main/webapp/projects.html
@@ -8,7 +8,8 @@
     <body>
         <ul id="navBar">
             <li><a href="index.html">Home</a></li>
-            <li><a href="projects.html">Projects</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="projects.html" class="active">Projects</a></li>
             <li><a href="images.html">Image Gallery</a></li>
         </ul>
         
