Changed the layout of About page.

--- a/portfolio/src/main/webapp/images.html
+++ b/portfolio/src/main/webapp/images.html
@@ -12,24 +12,23 @@
             <li><a href="projects.html">Projects</a></li>
             <li><a href="images.html" class="active">Image Gallery</a></li>
         </ul>
+
         <h1>Memory Palace Tour</h1>
         <div class="ImgGallery">
             <p>Welcome to my Memory Palace!</p>
             <p>This is me.</p>
             <img src="images/headphone.jpeg">
 
-            <p>Oops, wrong one. Here is a picture of me in Tibet. I went there
-                the summer before college. One of the most beautiful places I
-                have ever been to. Everyone should consider taking a trip there
-                at least once in a lifetime.</p>
+            <p>Oops, wrong one. Here is a picture of me in Tibet. I travelled
+              there the summer before college. One of the most beautiful places 
+              I have ever been to. Recommend everyone to consider visiting there
+              at least once in a lifetime.</p>
             <img src="images/tibet.jpeg">
 
-            <p>This is my most precious person in the world, my dear mother.</p>
+            <p>My dear mother, the most precious person on earth.</p>
             <img src="images/mom.jpeg">
 
-            <p>I was born in September, which makes me a Virgo. To be honest,
-                this is quite obvious if you have ever seen me collecting my
-                milk bottles.</p>
+            <p>I was born in September, a Virgo.</p>
             <img src="images/bottles.jpeg">
 
             <p>I love museums and have seriously considered working in one.</p>
@@ -39,17 +38,17 @@
             <img src="images/bread.jpeg">
 
             <p>Before my college, I also went to University of California,
-                Berkeley for summer school and met some of the best people
-                there.</p>
+              Berkeley for summer school and met some great people.</p>
             <img src="images/ucb.jpeg">
 
             <p>Now I am a rising junior at Vanderbilt University. One of my
-                best memory at Vanderbilt was singing in the University Concert
-                Choir.</p>
+              best memory at Vanderbilt was singing in the University Concert
+              Choir.</p>
             <img src="images/vucc.jpeg">
 
             <p>I also went on a volunteer trip called Alternative Winter Break
-                and built this cool small bridge with my teammates.</p>
+              during my first winter break and built this cool small bridge 
+              with my teammates. It was great fun!</p>
             <img src="images/awb.jpeg">
 
             <p>To be continued.</p>
