Add code to fetch data from server.

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -4,16 +4,18 @@
     <meta charset="UTF-8">
     <title>My Portfolio</title>
     <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
   </head>
-  <body>
+  <body onload="getData()">
     <ul id="navBar">
-        <li><a href="index.html" class="active">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="projects.html">Projects</a></li>
-        <li><a href="images.html">Image Gallery</a></li>
+      <li><a href="index.html" class="active">Home</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="projects.html">Projects</a></li>
+      <li><a href="images.html">Image Gallery</a></li>
     </ul>
     <div id="name">
-        <h1>Difan Yang</h1>
+      <h1>Difan Yang</h1>
     </div>
+    <div id="data-container"></div>
   </body>
 </html>
