Add html form to collect user comment.

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -16,6 +16,13 @@
     <div id="name">
       <h1>Difan Yang</h1>
     </div>
+    <form action="/data" method="POST">
+      <p>Leave a comment:</p>
+      <textarea name="comment">Leave your comment here.</textarea>
+      </br></br>
+
+      <input type="submit" />
+    </form>
     <div id="data-container"></div>
   </body>
 </html>
