--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -20,9 +20,12 @@
       <p>Leave a comment:</p>
       <textarea name="comment">Leave your comment here.</textarea>
       </br></br>
+      <label for="numComment">Number of comments to display:</label>
+      <input type="number" id="numComment" name="numComment">
 
       <input type="submit" />
     </form>
+    <button onclick="deleteData()">Delete all comments</button>
     <div id="data-container"></div>
   </body>
 </html>
