--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -20,12 +20,17 @@
       <p>Leave a comment:</p>
       <textarea name="comment">Leave your comment here.</textarea>
       </br></br>
-      <label for="numComment">Number of comments to display:</label>
-      <input type="number" id="numComment" name="numComment">
-
       <input type="submit" />
+      </br></br>
+    </form>
+    <form action="/data" method="GET">
+      <label for="numComment">Number of comments to display:</label>
+      <input type="number" name="numComment" value="1">
+      </br></br>
+      <input type="submit" />
+      </br></br>
     </form>
     <button onclick="deleteData()">Delete all comments</button>
-    <div id="data-container"></div>
+    <ul id="data-container"></ul>
   </body>
 </html>
