--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -16,10 +16,13 @@
     <div id="name">
       <h1>Difan Yang</h1>
     </div>
-    <form action="/data" method="POST">
+    <form id="my-form" method="POST" enctype="multipart/form-data">
       <p>Leave a comment:</p>
       <textarea name="comment">Leave your comment here.</textarea>
       </br></br>
+      <p>Upload an image:</p>
+      <input type="file" name="image">
+      <br/><br/>
       <input type="submit" />
       </br></br>
     </form>
@@ -28,5 +31,6 @@
     <button onclick="getData()">Display comments</button>
     <button onclick="deleteData()">Delete all comments</button>
     <div id="comments-container"></div>
+    <img style="display: none;" id="uploadImg" alt="Uploaded image.">
   </body>
 </html>
