--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
   </head>
-  <body onload="getData()">
+  <body onload="loadPage()">
     <ul id="navBar">
       <li><a href="index.html" class="active">Home</a></li>
       <li><a href="about.html">About</a></li>
@@ -16,21 +16,20 @@
     <div id="name">
       <h1>Difan Yang</h1>
     </div>
-    <form id="my-form" method="POST" enctype="multipart/form-data">
+    <form id="input-form" method="POST" enctype="multipart/form-data">
       <p>Leave a comment:</p>
       <textarea name="comment">Leave your comment here.</textarea>
       </br></br>
       <p>Upload an image:</p>
       <input type="file" name="image">
-      <br/><br/>
+      </br></br>
       <input type="submit" />
       </br></br>
     </form>
-    <label for="numComment">Number of comments to display:</label>
+    <label for="numComment">Number of comments/images to display:</label>
     <input type="number" name="numComment" id="numComment" value="0">
-    <button onclick="getData()">Display comments</button>
-    <button onclick="deleteData()">Delete all comments</button>
-    <div id="comments-container"></div>
-    <img style="display: none;" id="uploadImg" alt="Uploaded image.">
+    <button onclick="getData()">Display comments and images</button>
+    <button onclick="deleteData()">Delete all comments and images</button>
+    <div id="inputs-container"></div>
   </body>
 </html>
