Add login features.

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -16,6 +16,7 @@
     <div id="name">
       <h1>Difan Yang</h1>
     </div>
+    <div id="login"></div>
     <form id="input-form" method="POST" enctype="multipart/form-data">
       <p>Leave a comment:</p>
       <textarea name="comment">Leave your comment here.</textarea>
